fix: remove property that causes a bad responsive design on mobiles and format

--- a/src/components/Common/GridContainer.module.css
+++ b/src/components/Common/GridContainer.module.css
@@ -1,6 +1,6 @@
 .gridContainer {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(min(var(--grid-width), 100%), 1fr));
-  grid-auto-rows: var(--grid-height);
-  gap: var(--grid-gap);
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(var(--grid-width), 1fr));
+	grid-auto-rows: var(--grid-height);
+	gap: var(--grid-gap);
 }
